Framework and placeholder HTML/CSS content - not in working state.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,54 @@
 </head>
 <body>
     <header>
-        <h1>Hello World</h1>
+        <img src="./assets/images/pfp.png" alt="Photo of John" />
+        <h1>John Hornick</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+        </section>
+        <section id="projects">
+            <h2>My Work</h2>
+            <div class="card">
+                <figure>
+                    <img src="./assets/images/Project1.png" alt="image relating to first project" />
+                    <figurecaption>Project 1 Title<br><span>Techs used.</span></figurecaption>
+                </figure>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="./assets/images/Project2.png" alt="image relating to second project" />
+                    <figurecaption>Project 2 Title<br><span>Techs used.</span></figurecaption>
+                </figure>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="./assets/images/Project3.png" alt="image relating to third project" />
+                    <figurecaption>Project 3 Title<br><span>Techs used.</span></figurecaption>
+                </figure>
+            </div>
+
+            <div class="card">
+                <figure>
+                    <img src="./assets/images/Project1.png" alt="image relating to fourth project" />
+                    <figurecaption>Project 4 Title<br><span>Techs used.</span></figurecaption>
+                </figure>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Reach Me</h2>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
