--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <header>
-        <img src="./assets/images/pfp.png" alt="Photo of John" />
-        <h1>John Hornick</h1>
+        <!--group image and name to left of header-->
+        <div>
+            <img src="./assets/images/pfp.png" alt="Photo of John" />
+            <h1>John Hornick</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -22,33 +25,45 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
+            <div>
+
+            </div>
         </section>
         <section id="projects">
             <h2>My Work</h2>
-            <div class="card">
-                <figure>
-                    <img src="./assets/images/Project1.png" alt="image relating to first project" />
-                    <figurecaption>Project 1 Title<br><span>Techs used.</span></figurecaption>
-                </figure>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="./assets/images/Project2.png" alt="image relating to second project" />
-                    <figurecaption>Project 2 Title<br><span>Techs used.</span></figurecaption>
-                </figure>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="./assets/images/Project3.png" alt="image relating to third project" />
-                    <figurecaption>Project 3 Title<br><span>Techs used.</span></figurecaption>
-                </figure>
-            </div>
-
-            <div class="card">
-                <figure>
-                    <img src="./assets/images/Project1.png" alt="image relating to fourth project" />
-                    <figurecaption>Project 4 Title<br><span>Techs used.</span></figurecaption>
-                </figure>
+            <div>
+                <div class="card">
+                    <a href="https://www.msn.com/" target="_blank">
+                        <figure>
+                            <img src="./assets/images/Project1.png" alt="image relating to first project" />
+                            <figurecaption>Project 1 Title<br><span>Techs used.</span></figurecaption>
+                        </figure>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://www.reddit.com/" target="_blank">
+                        <figure>
+                            <img src="./assets/images/Project2.png" alt="image relating to second project" />
+                            <figurecaption>Project 2 Title<br><span>Techs used.</span></figurecaption>
+                        </figure>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://www.reddit.com/r/dreamtheater" target="_blank">
+                        <figure>
+                            <img src="./assets/images/Project3.png" alt="image relating to third project" />
+                            <figurecaption>Project 3 Title<br><span>Techs used.</span></figurecaption>
+                        </figure>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://www.reddit.com/r/symphonyx" target="_blank">
+                        <figure>
+                            <img src="./assets/images/Project1.png" alt="image relating to fourth project" />
+                            <figurecaption>Project 4 Title<br><span>Techs used.</span></figurecaption>
+                        </figure>
+                    </a>
+                </div>
             </div>
         </section>
         <section id="contact">
