Code cleaned up, TODO list items addressed.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <header>
         <!--group image and name to left of header-->
         <div>
-            <img src="./assets/images/pfp.png" alt="Photo of John" />
+            <img src="./assets/images/pfp.jpg" alt="Photo of John" />
             <h1>John Hornick</h1>
         </div>
+        <!--ID links to page sections-->
         <nav>
             <ul>
                 <li class="hovereffect"><a href="#about">About</a></li>
@@ -25,6 +26,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
+            <!--paragraphs about me-->
             <div>
                 <p>
                     I have been programming for about as long as I can remember! From silly little .NET C# applications in youth (when the framework was new!), using buttons to change text in labels, all the way to taking courses in college and dabbling in new languages and platforms. Most recently, I dove into a web development bootcamp to consolidate, modernize, and most importantly improve my knowledge and practices.
@@ -37,34 +39,38 @@
         <section id="projects">
             <h2>My Work</h2>
             <div>
+                <!--minesweeper plus card-->
                 <div class="card">
-                    <a href="https://www.msn.com/" target="_blank">
+                    <a href="https://hornickjohn.github.io/public-host-sweeper/" target="_blank">
                         <figure class="hovereffect">
-                            <img src="./assets/images/Project1.png" alt="image relating to first project" />
-                            <figurecaption>Project 1 Title<br><span>Techs used.</span></figurecaption>
+                            <img src="./assets/images/sweeper-image.png" alt="Partial screen grab from a game of Minesweeper." />
+                            <figurecaption>Minesweeper Plus<br><span>Unity/C#</span></figurecaption>
                         </figure>
                     </a>
                 </div>
+                <!--homework 1 card-->
                 <div class="card">
-                    <a href="https://www.reddit.com/" target="_blank">
+                    <a href="https://github.com/hornickjohn/refactor-for-accessibility" target="_blank">
                         <figure class="hovereffect">
-                            <img src="./assets/images/Project2.png" alt="image relating to second project" />
-                            <figurecaption>Project 2 Title<br><span>Techs used.</span></figurecaption>
+                            <img src="./assets/images/refactor-image.png" alt="Image of CSS code." />
+                            <figurecaption>Refactor Project<br><span>HTML/CSS</span></figurecaption>
                         </figure>
                     </a>
                 </div>
+                <!--placeholder card for future project-->
                 <div class="card">
-                    <a href="https://www.reddit.com/r/dreamtheater" target="_blank">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                         <figure class="hovereffect">
-                            <img src="./assets/images/Project3.png" alt="image relating to third project" />
+                            <img src="./assets/images/coming-soon-image.png" alt="Stick drawing of individual working on PC." />
                             <figurecaption>Project 3 Title<br><span>Techs used.</span></figurecaption>
                         </figure>
                     </a>
                 </div>
+                <!--placeholder card for future project-->
                 <div class="card">
-                    <a href="https://www.reddit.com/r/symphonyx" target="_blank">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
                         <figure class="hovereffect">
-                            <img src="./assets/images/Project1.png" alt="image relating to fourth project" />
+                            <img src="./assets/images/coming-soon-image.png" alt="Stick drawing of individual working on PC." />
                             <figurecaption>Project 4 Title<br><span>Techs used.</span></figurecaption>
                         </figure>
                     </a>
@@ -74,12 +80,14 @@
         <section id="contact">
             <h2>Reach Me</h2>
             <div>
+                <!--Form providing an option to directly message me through web page-->
                 <form>
                     <label for="name-input">Name:</label><input type="text" id="name-input" /><br>
                     <label for="subject-input">Subject:</label><input type="text" id="subject-input" /><br>
                     <label for="message-input">Message:</label><textarea id="message-input" placeholder="Type whatever you like here, not like you'll be able to send it anyway until we have some JS."></textarea>
                     <input type="button" value="Send" />
                 </form>
+                <!--section listing contact info, with linkedin link-->
                 <div>
                     <h3>
                         Contact Info:
@@ -93,8 +101,5 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
