Final reformatting, and README written up.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/style.css">
     <title>Portfolio - John Hornick</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
                         </figure>
                     </a>
                 </div>
-                <!--homework 1 card-->
+                <!--homework 1 card, linking to repo because the refactored code is the focus, not the page I didn't make-->
                 <div class="card">
                     <a href="https://github.com/hornickjohn/refactor-for-accessibility" target="_blank">
                         <figure class="hovereffect">
