Link to new project added. git status git abort git

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 </div>
                 <!--placeholder card for future project-->
                 <div class="card">
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                    <a href="https://github.com/hornickjohn/quote-game" target="_blank">
                         <figure class="hovereffect">
-                            <img src="./assets/images/coming-soon-image.png" alt="Stick drawing of individual working on PC." />
-                            <figurecaption>Project 3 Title<br><span>Techs used.</span></figurecaption>
+                            <img src="./assets/images/quote-game-image.png" alt="Images of Trump and Kanye." />
+                            <figurecaption>Quote Game<br><span>HTML/CSS/Javascript</span></figurecaption>
                         </figure>
                     </a>
                 </div>
